istio/Gateway/istiogateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: application-gateway
spec:
  selector: 
    istio: ingressgateway
  servers: 
  - port: 
      number: 80
      name: http
      protocol: HTTP
    hosts: 
      - "ravib.southindia.cloudapp.azure.com"
